# eimu_v2

./: .gitignore  README.md
eimu_v2_cpp_serial_client/: CMakeLists.txt  README.md
eimu_v2_cpp_serial_client/examples/: motor_control.cpp  read_imu.cpp
eimu_v2_cpp_serial_client/include/: eimu_v2.hpp  epmc_v2.hpp
eimu_v2_driver_code/: platformio.ini
eimu_v2_driver_code/include/: command_functions.h  i2c_comm.h  madgwick_filter.h  mpu9250_spi.h  serial_comm.h  vectlab.h
eimu_v2_driver_code/src/: madgwick_filter.cpp  main.cpp  mpu9250_spi.cpp
eimu_v2_driver_code/test/: i2c_master.cpp  main_copy.cpp  parameter_store.h
eimu_v2_py_serial_client/: README.md  eimu_v2.py  epmc_v2.py  motor_control.py  read_imu.py
eimu_v2_setup_application/: README.md  app.py  requirements.txt
eimu_v2_setup_application/eimu_v2/: eimu_v2_full.py  globalParams.py  main.py
eimu_v2_setup_application/eimu_v2/pages/: AccCalibratePage.py  AccVariancePage.py  GyroCalibratePage.py  GyroVariancePage.py  I2CSetupPage.py  ImuVisualizePage.py  MagCalibratePage.py  MainAppPage.py  OrientationVariancePage.py  ResetSetupPage.py  SerialConnectPage.py
eimu_v2_setup_application/epmc_v2/: epmc_v2_full.py  globalParams.py  main.py
eimu_v2_setup_application/epmc_v2/components/: CmdMotorFrame.py  GraphFrame.py  MotorDrawFrame.py
eimu_v2_setup_application/epmc_v2/pages/: EncSetupPage.py  I2CSetupPage.py  ImuCalibratePage.py  ImuVariancePage.py  MainAppPage.py  PidSetupPage.py  ResetSetupPage.py  SerialConnectPage.py
